Ajustes swagger e início da implemetação do módulo de Usuarios
