# UniFood/src/main/java/com/unifood/rest/UsuarioRest.java
@@ -1,0 +1,26 @@
+package com.unifood.rest;
+
+import javax.inject.Inject;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.Response;
+
+import com.unifood.ed.UsuarioED;
+import com.unifood.rn.UsuarioRN;
+import com.unifood.util.Rest;
+
+@Path("/usuario")
+public class UsuarioRest extends Rest
+{
+	@Inject
+	private UsuarioRN usuarioRN;
+
+	@POST
+	@Path("/lista")
+	@Produces("application/json")
+	public Response lista(UsuarioED usuarioED) {
+		return Response.ok(usuarioRN.lista(usuarioED)).build();
+	}
+
+}
